# thr_d

./: .env.example  .gitignore  GUIDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  constants.py  db.py  errors.py  main.py  middleware.py  models.py  rate_limiter.py
backend/app/api/: __init__.py  dependencies.py  router.py
backend/app/exporters/: base.py  csv_exporter.py  fcstd_exporter.py  json_exporter.py  step_exporter.py
backend/app/integrations/: sync_service.py
backend/app/providers/: base.py  local_materials_provider.py  local_modules_provider.py  local_templates_provider.py
backend/app/repositories/: export_job_repository.py  integration_status_repository.py  material_repository.py
backend/app/schemas/: api.py  domain.py
backend/app/services/: catalog_service.py  export_service.py  project_service.py  specification.py
backend/app/validators/: base.py  composite_validator.py  constants.py  dimensions_validator.py  geometry.py  intersections_validator.py  parent_cycle_validator.py  project_limits_validator.py  project_validator.py  room_bounds_validator.py  (+2 more)
backend/tests/: conftest.py  test_acceptance_integration.py  test_contracts.py  test_error_shape.py  test_export_jobs_api.py  test_exporters.py  test_health.py  test_integrations_api.py  test_materials_api.py  test_modules_api.py  test_projects_api.py  test_repository_layer.py  test_security.py  test_seed_catalog.py  test_specification.py  test_templates_api.py  test_trace_id.py
(+106 files in other folders)
