[project]
name = "thr-d-backend"
version = "0.1.0"
description = "Backend API skeleton for the thr_d furniture constructor MVP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.122.0,<1.0.0",
  "pydantic-settings>=2.11.0,<3.0.0",
  "sqlalchemy>=2.0.44,<3.0.0",
  "psycopg[binary]>=3.2.13,<4.0.0",
  "uvicorn[standard]>=0.38.0,<1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "pytest>=8.4.2,<9.0.0",
  "ruff>=0.14.3,<1.0.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.uv]
package = false
